--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto-slab": "^0.1.0",
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
     "@unform/core": "^2.1.3",
     "@unform/mobile": "^2.1.3",
+    "axios": "^0.19.2",
     "expo": "~38.0.1",
     "expo-font": "~8.2.1",
     "expo-splash-screen": "~0.4.0",
@@ -31,7 +33,8 @@
     "react-native-web": "~0.11.7",
     "remove": "^0.1.5",
     "styled-components": "^5.1.1",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "yup": "^0.29.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
@@ -40,6 +43,7 @@
     "@types/react-native": "^0.63.2",
     "@types/react-native-vector-icons": "^6.4.5",
     "@types/styled-components": "^5.1.1",
+    "@types/yup": "^0.29.3",
     "babel-jest": "~25.2.6",
     "jest": "~25.2.6",
     "react-test-renderer": "~16.11.0"
